# VISHC-Medical-Chatbot

./: .gitignore  README.md  create_eval_data.py  create_weaviate_schema.py  docker-compose.yml  eval.py  eval_result_ms_marco.txt  pyproject.toml  requirements.txt  run.py  run_streamlit.py  upload_data.py  vishcMedBot.Dockerfile
docs/: data_mini.json
eval/: create_eval_data.py  eval.py  eval_result_ms_marco.txt
knowledge_distillation/: create_dataset.py  make_multilingual.py  plotting.py
main/: __init__.py  _config.py  chatbot.py  enums.py  history.py  retriever.py  sidebar.py  utils.py  weaviate_manager.py
schema/: medical_docs.json  vietnamese_corpus.json
tests/: helper.py  weaviate_test.py
